src/test/testData/AnnotatorUnresolvedEnumeration.klass
package example

class User
{
    name: String key;
    status: <error descr="Cannot resolve symbol 'NonExistent'">NonExistent</error>;
}
